# inventor3d

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
resources/: example.3mf
