[project]
name = "inventor3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "lib3mf>=2.4.1.post1",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.38.0",
]
